--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -3,7 +3,6 @@ name: filestore
 on: [push, pull_request]
 
 jobs:
-
   filestoreci-build:
     name: Test with go ${{ matrix.go_version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -16,7 +15,6 @@ jobs:
         os: [ubuntu-latest]
 
     steps:
-
       - name: Set up Go ${{ matrix.go_version }}
         uses: actions/setup-go@v2
         with:
@@ -32,13 +30,17 @@ jobs:
 
       - name: Build
         run: |
-          go build -v -o filestoreci .
+          go build -v ./...
 
-      - name: Collect main.go file
+      - name: Test
+        run: |
+          go test -v ./...
+
+      - name: Collect apiserver.go file
         uses: actions/upload-artifact@v1.0.0
         with:
           name: main-output
-          path: main.go
+          path: cmd/apiserver/apiserver.go
 
           #  - name: Publish to Registry
           #    uses: elgohr/Publish-Docker-GitHub-Action@master
@@ -49,3 +51,9 @@ jobs:
           #registry: ccr.ccs.tencentyun.com # 腾讯云Registry
           #dockerfile: Dockerfile # 指定 Dockerfile 的位置
           #tag_names: true # 是否将 release 的 tag 作为 docker image 的 tag
+
+      # - name: Login to DockerHub
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: ${{ secrets.FILE_USERNAME }}
+      #     password: ${{ secrets.FILE_PASSWORD }}
