--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build
         run: |
-          go build -v -o filestoreci .
+          go build cmd/apiserver/apiserver.go
 
       - name: Collect main.go file
         uses: actions/upload-artifact@v1.0.0
@@ -47,3 +47,9 @@ jobs:
           #registry: ccr.ccs.tencentyun.com # 腾讯云Registry
           #dockerfile: Dockerfile # 指定 Dockerfile 的位置
           #tag_names: true # 是否将 release 的 tag 作为 docker image 的 tag
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.FILE_USERNAME }}
+          password: ${{ secrets.FILE_PASSWORD }}
